--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">公路监理</string>
     <string name="app_title">公路工程监理现场作业系统</string>
     <string name="vendor_name">杭州公路工程监理有限公司</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
