--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">公路监理</string>
+    <string name="app_name">监理现场作业</string>
     <string name="app_title">公路工程监理现场作业系统</string>
-    <string name="vendor_name">杭州公路工程监理咨询有限公司</string>
+    <string name="vendor_name">杭州公路工程监理咨询公司</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
