--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,11 @@
      <string name="app_title">水运工程监理现场作业系统</string>
      <string name="vendor_name">杭州港建德港区十里埠综合作业区工程</string>-->
 
+    <!--9008-->
+    <!--<string name="app_name">320管理</string>
+     <string name="app_title">公路工程监理现场作业系统</string>
+     <string name="vendor_name">崇贤至东湖路连接线工程一期工程</string>-->
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
