--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
 
     <!--9008-->
     <!--<string name="app_name">320管理</string>
-     <string name="app_title">公路工程监理现场作业系统</string>
+     <string name="app_title">公路工程业主现场管理系统</string>
      <string name="vendor_name">崇贤至东湖路连接线工程一期工程</string>-->
 
 
